
nobase_dist_data_DATA =  \
	lxpanel/profile/BLACKBOX/config \
	lxpanel/profile/BLACKBOX/panels/panel \
	lxpanel/profile/FLUXBOX/config \
	lxpanel/profile/FLUXBOX/panels/panel \
	lxpanel/profile/FVWM/config \
	lxpanel/profile/FVWM/panels/panel \
	lxpanel/profile/ICEWM/config \
	lxpanel/profile/ICEWM/panels/panel \
	lxpanel/profile/OPENBOX/config \
	lxpanel/profile/OPENBOX/panels/panel \
	lxpanel/profile/WMAKER/config \
	lxpanel/profile/WMAKER/panels/panel \
	xde/blackbox/menu \
	xde/blackbox/xde-rc \
	xde/fluxbox/apps \
	xde/fluxbox/fbdesk \
	xde/fluxbox/fbdesk.icons \
	xde/fluxbox/fbpager \
	xde/fluxbox/init \
	xde/fluxbox/keys \
	xde/fluxbox/menu \
	xde/fluxbox/menuconfig \
	xde/fluxbox/overlay \
	xde/fluxbox/slitlist \
	xde/fluxbox/startup \
	xde/fluxbox/unexicon-menu \
	xde/fluxbox/usermenu \
	xde/fluxbox/windowmenu \
	xde/fluxbox/xde-init \
	xde/icewm/focus_mode \
	xde/icewm/keys \
	xde/icewm/menu \
	xde/icewm/preferences \
	xde/icewm/preferences.bak \
	xde/icewm/prefoverride \
	xde/icewm/programs \
	xde/icewm/recent.menu \
	xde/icewm/theme \
	xde/icewm/toolbar \
	xde/icewm/winoptions \
	xde/images/arch-banner.png \
	xde/images/unexicon-banner.png
