

nobase_dist_xdgconf_DATA = \
	pcmanfm/BLACKBOX/pcmanfm.conf \
	pcmanfm/FLUXBOX/pcmanfm.conf \
	pcmanfm/FVWM/pcmanfm.conf \
	pcmanfm/ICEWM/pcmanfm.conf \
	pcmanfm/OPENBOX/pcmanfm.conf \
	pcmanfm/WMAKER/pcmanfm.conf \
	xde/xde-session/BLACKBOX/desktop.conf \ \
	xde/xde-session/default/input.ini \
	xde/xde-session/default/xsettings.ini \
	xde/xde-session/FLUXBOX/autostart \
	xde/xde-session/FLUXBOX/desktop.conf \
	xde/xde-session/FVWM/desktop.conf \
	xde/xde-session/ICEWM/desktop.conf \
	xde/xde-session/LXDE/autostart \
	xde/xde-session/OPENBOX/desktop.conf \
	xde/xde-session/WMAKER/desktop.conf
